--- a/index.html
+++ b/index.html
@@ -559,9 +559,11 @@
             <div class="audience-label">Audience</div>
         </div>
         <button class="control-panel-button">Control Panel</button>
-        <button class="export-pdf-button">Export Layout PDF</button>
         <div class="control-panel">
             <div class="scene-manager">
+                <div class="control-buttons">
+                    <button class="export-pdf-button">Export Layout PDF</button>
+                </div>
                 <div class="scene-list" id="sceneList">
                     <!-- Scenes will be added here dynamically -->
                 </div>
