--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
         .slider-container input[type="range"] {
             position: absolute;
             -webkit-appearance: none;
+            appearance: none;
             width: 150px;
             height: 4px;
             background: #555;
@@ -285,7 +286,7 @@
             top: 75px;
             transition: all 0.5s ease;
             min-width: 150px;
-            step: 1;
+            -webkit-appearance: none;
         }
 
         .slider-label {
