Fixed scene creation

--- a/index.html
+++ b/index.html
@@ -1043,7 +1043,7 @@
             const sceneData = {
                 spotlights: {},
                 props: [],
-                transitionTime: parseInt(document.getElementById('transition-time').value) || 5
+                transitionTime: 5 // Default transition time
             };
             
             // Get spotlight values - Fixed to ensure proper value capture
